--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "cross-env": "7.0.3",
     "eslint": "7.28.0",
     "jest": "26.6.3",
+    "nodemon": "^2.0.12",
     "supertest": "6.1.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.95.7"
   }
 }
