--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "knex": "^0.95.7"
+    "knex": "^0.95.7",
+    "sqlite3": "^5.0.2"
   }
 }
